--- a/hall.html
+++ b/hall.html
@@ -21,9 +21,9 @@
     <section class="buying">
       <div class="buying__info">
         <div class="buying__info-description">
-          <h2 class="buying__info-title">Звёздные войны XXIII: Атака клонированных клонов</h2>
-          <p class="buying__info-start">Начало сеанса: 18:30</p>
-          <p class="buying__info-hall">Зал 1</p>          
+          <h2 class="buying__info-title">Название фильма</h2>
+          <p class="buying__info-start">Начало сеанса: 00:00</p>
+          <p class="buying__info-hall">Зал 0</p>          
         </div>
         <div class="buying__info-hint">
           <p>Тапните дважды,<br>чтобы увеличить</p>
@@ -31,6 +31,8 @@
       </div>
       <div class="conf-step">
         <div class="conf-step__wrapper">
+        </div>
+        <!-- <div class="conf-step__wrapper">
           <div class="conf-step__row">
             <span class="conf-step__chair conf-step__chair_disabled"></span><span class="conf-step__chair conf-step__chair_disabled"></span>
             <span class="conf-step__chair conf-step__chair_disabled"></span><span class="conf-step__chair conf-step__chair_disabled"></span>
@@ -120,11 +122,11 @@
               <span class="conf-step__chair conf-step__chair_standart"></span><span class="conf-step__chair conf-step__chair_standart"></span>
               <span class="conf-step__chair conf-step__chair_standart"></span><span class="conf-step__chair conf-step__chair_standart"></span>
             </div>
-        </div>
+        </div> -->
         <div class="conf-step__legend">
           <div class="col">
-            <p class="conf-step__legend-price"><span class="conf-step__chair conf-step__chair_standart"></span> Свободно (<span class="conf-step__legend-value price-standart">250</span>руб)</p>
-            <p class="conf-step__legend-price"><span class="conf-step__chair conf-step__chair_vip"></span> Свободно VIP (<span class="conf-step__legend-value price-vip">350</span>руб)</p>            
+            <p class="conf-step__legend-price"><span class="conf-step__chair conf-step__chair_standart"></span> Свободно (<span class="conf-step__legend-value price-standart">0</span>руб)</p>
+            <p class="conf-step__legend-price"><span class="conf-step__chair conf-step__chair_vip"></span> Свободно VIP (<span class="conf-step__legend-value price-vip">0</span>руб)</p>            
           </div>
           <div class="col">
             <p class="conf-step__legend-price"><span class="conf-step__chair conf-step__chair_taken"></span> Занято</p>
@@ -132,7 +134,7 @@
           </div>
         </div>
       </div>
-      <button class="acceptin-button"  >Забронировать</button>
+      <button class="acceptin-button">Забронировать</button>
     </section>     
   </main>
   <script src="js/createRequest.js"></script>
