--- a/index.html
+++ b/index.html
@@ -33,12 +33,37 @@
     <a class="page-nav__day" href="#">
       <span class="page-nav__day-week">Пт</span><span class="page-nav__day-number">4</span>
     </a>
-    <a class="page-nav__day page-nav__day_weekend" href="#">
+    <a class="page-nav__day" href="#">
       <span class="page-nav__day-week">Сб</span><span class="page-nav__day-number">5</span>
     </a>
   </nav>
-  
   <main>
+    <section class="movie">
+      <div class="movie__info">
+        <div class="movie__poster">
+          <img class="movie__poster-image" alt="poster not found" src="img/no_poster.jpg">
+        </div>
+        <div class="movie__description">
+          <h2 class="movie__title">Название фильма</h2>
+          <p class="movie__synopsis">Описание фильма</p>
+          <p class="movie__data">
+            <span class="movie__data-duration">Хронометраж</span>
+            <span class="movie__data-origin">Страна</span>
+          </p>
+        </div>
+      </div>  
+      
+      <div class="movie-seances__hall">
+        <h3 class="movie-seances__hall-title">Зал 1</h3>
+        <ul class="movie-seances__list">
+          <li class="movie-seances__time-block">
+            <a class="movie-seances__time" href="hall.html">00:00</a>
+          </li>
+        </ul>
+      </div>     
+    </section>   
+  </main>
+  <!-- <main>
     <section class="movie">
       <div class="movie__info">
         <div class="movie__poster">
@@ -143,7 +168,7 @@
         </ul>
       </div>     
     </section>     
-  </main>
+  </main> -->
   
 </body>
 </html>
