--- a/payment.html
+++ b/payment.html
@@ -25,13 +25,14 @@
       </header>
       
       <div class="ticket__info-wrapper">
-        <p class="ticket__info">На фильм: <span class="ticket__details ticket__title">Звёздные войны XXIII: Атака клонированных клонов</span></p>
-        <p class="ticket__info">Ряд/Место: <span class="ticket__details ticket__chairs">6/7, 6/8</span></p>
-        <p class="ticket__info">В зале: <span class="ticket__details ticket__hall">1</span></p>
-        <p class="ticket__info">Начало сеанса: <span class="ticket__details ticket__start">18:30</span></p>
-        <p class="ticket__info">Стоимость: <span class="ticket__details ticket__cost">600</span> рублей</p>
+        <p class="ticket__info">На фильм: <span class="ticket__details ticket__title">Название фильма</span></p>
+        <p class="ticket__info">Ряд/Место: <span class="ticket__details ticket__chairs">0/0</span></p>
+        <p class="ticket__info">В зале: <span class="ticket__details ticket__hall">0</span></p>
+        <p class="ticket__info">Начало сеанса: <span class="ticket__details ticket__start">00:00</span></p>
+        <p class="ticket__info">Стоимость: <span class="ticket__details ticket__cost">0</span> рублей</p>
 
         <button class="acceptin-button" onclick="location.href='ticket.html'" >Получить код бронирования</button>
+        <!-- <button class="acceptin-button">Получить код бронирования</button> -->
 
         <p class="ticket__hint">После оплаты билет будет доступен в этом окне, а также придёт вам на почту. Покажите QR-код нашему контроллёру у входа в зал.</p>
         <p class="ticket__hint">Приятного просмотра!</p>
