--- a/ticket.html
+++ b/ticket.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>ИдёмВКино</title>
   <script src="js/ticket.js" defer></script>
+  <script src="js/QRCreator.js" defer></script>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
@@ -25,10 +26,10 @@
       </header>
       
       <div class="ticket__info-wrapper">
-        <p class="ticket__info">На фильм: <span class="ticket__details ticket__title">Звёздные войны XXIII: Атака клонированных клонов</span></p>
-        <p class="ticket__info">Ряд/Место: <span class="ticket__details ticket__chairs">6/7, 6/8</span></p>
-        <p class="ticket__info">В зале: <span class="ticket__details ticket__hall">1</span></p>
-        <p class="ticket__info">Начало сеанса: <span class="ticket__details ticket__start">18:30</span></p>
+        <p class="ticket__info">На фильм: <span class="ticket__details ticket__title">Название фильма</span></p>
+        <p class="ticket__info">Ряд/Место: <span class="ticket__details ticket__chairs">0/0</span></p>
+        <p class="ticket__info">В зале: <span class="ticket__details ticket__hall">0</span></p>
+        <p class="ticket__info">Начало сеанса: <span class="ticket__details ticket__start">00:00</span></p>
 
         <img class="ticket__info-qr" src="img/qr-code.png">
 
