--- a/payment.html
+++ b/payment.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>ИдёмВКино</title>
+  <script src="js/createRequest.js" defer></script>
   <script src="js/payment.js" defer></script>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -31,8 +32,8 @@
         <p class="ticket__info">Начало сеанса: <span class="ticket__details ticket__start">00:00</span></p>
         <p class="ticket__info">Стоимость: <span class="ticket__details ticket__cost">0</span> рублей</p>
 
-        <button class="acceptin-button" onclick="location.href='ticket.html'" >Получить код бронирования</button>
-        <!-- <button class="acceptin-button">Получить код бронирования</button> -->
+        <!-- <button class="acceptin-button" onclick="location.href='ticket.html'" >Получить код бронирования</button> -->
+        <button class="acceptin-button">Получить код бронирования</button>
 
         <p class="ticket__hint">После оплаты билет будет доступен в этом окне, а также придёт вам на почту. Покажите QR-код нашему контроллёру у входа в зал.</p>
         <p class="ticket__hint">Приятного просмотра!</p>
