--- a/ticket.html
+++ b/ticket.html
@@ -31,7 +31,8 @@
         <p class="ticket__info">В зале: <span class="ticket__details ticket__hall">0</span></p>
         <p class="ticket__info">Начало сеанса: <span class="ticket__details ticket__start">00:00</span></p>
 
-        <img class="ticket__info-qr" src="img/qr-code.png">
+        <div class="ticket__info-qr"></div>
+        <!-- <img class="ticket__info-qr" src="img/qr-code.png"> -->
 
         <p class="ticket__hint">Покажите QR-код нашему контроллеру для подтверждения бронирования.</p>
         <p class="ticket__hint">Приятного просмотра!</p>
