--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
 <body>
   <header class="page-header">
-    <h1 class="page-header__title">Идём<span>в</span>кино</h1>
+    <a href="https://divine61.github.io/JS-Diploma-Work/" style="text-decoration: none;">
+      <h1 class="page-header__title">Идём<span>в</span>кино</h1>
+    </a>
   </header>
   
   <nav class="page-nav">
